[v0.0.1 - 31/12/2010]
  - Création du porjet