@@ -1,5 +1,5 @@
 <?php
-define( 'ROOT', './' );
+define( 'ROOT', './' ); // Pour plus tard
 define( 'PHP', strrchr( __FILE__, '.' ) );
 define( 'VERSION', '0.0.1' );
 ini_set('date.timezone', 'Europe/Paris');
