@@ -1,2 +1,4 @@
 [v0.0.1 - 31/12/2010]
   - Création du porjet
+  - Mise en place de la configuration
+  - Création de la connexion a la base de donnée
